--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,228 +1,32 @@
-:root {
-  --accent-color: #f2353f;
-  --lite-color: #ffffff;
-  --bg-color: #f2f4f7;
-  --label-color: #b0b6bf;
-  --text-color: #1f2c37;
-}
+@import './utils/variables';
+@import './utils/accent-block-upper';
+@import './utils/visually-hidden';
+@import './base/common';
+@import './base/container';
+@import './components/button';
+@import './components/menu';
+@import './components/main-nav';
+@import './components/page-title';
+@import './components/social-list';
+@import './components/table';
+@import './layouts/grid';
+@import './layouts/section';
+@import './layouts/header';
+@import './layouts/hero';
+@import './layouts/benefits';
 
-body {
-  font-family: "TT Norms", sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: var(--text-color);
-  width: 1600px;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul {
-  margin-top: 0;
-  padding-left: 0;
-}
-
-.visually-hidden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px, 1px, 1px,1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  overflow: hidden;
-}
-
-.link {
-  text-decoration: none;
-  color: inherit;
-}
-
-.link:hover,
-.link:focus,
-.button:hover,
-.button:focus {
-  color: var(--accent-color);
-}
-
-.button {
-  border: none;
-  line-height: 1;
-  color: inherit;
-  background-color: inherit;
-  cursor: pointer;
-}
-
-.list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.upper {
-  text-transform: uppercase;
-}
-
-.bold {
-  font-weight: 700;
-}
-.container {
-  width: 1200px;
-  margin-right: auto;
-  margin-left: auto;
-  /* outline: 1px solid red; */
-}
-
-.content-in-row {
-  display: flex;
-  align-items: center;
-}
-
-.section {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  /* outline: 1px solid blue; */
-}
+// .container-page-title {
+//   width: 570px;
+//   padding-right: 120px;
+// }
 
 
-.header {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.header .content-in-row {
-  justify-content: space-between;
-  line-height: 1;
-}
-
-
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  width: 570px;
-  margin-bottom: 0;
-}
-
-.nav .list-item {
-  display: flex;
-  align-items: center;
-}
-
-.nav .icon {
-  width: 16px;
-  height: 16px;
-  margin-right: 11px;
-  fill: currentColor;
-}
-
-
-.nav .link {
-  font-size: 15px;
-
-}
-
-.header .list-item:first-child {
-  display: flex;
-}
-
-.header .list-item:last-child {
-  font-size: 13px;
-  font-weight: 700;
-  letter-spacing: 0.05em;
-}
-
-
-
-.hero {
-  padding-top: 568px;
-
-  padding-bottom: 70px;
-  
-  font-size: 14px;
-  line-height: 1;
-  
-  color: var(--lite-color);
-  background-image: url(../images/main/img1.jpg) ;
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: 1500px;
-}
-
-.container-hero {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-
-.container-page-title {
-  width: 570px;
-  padding-right: 120px;
-}
-
-.social-list {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 0;
-}
-
-.social-list .social-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-
-.page-title {
-  display: inline;
-  font-size: 45px;
-  font-weight: 500;
-  line-height: 1.2;
-  
-}
-
-
-
-.accent {
-  color: var(--accent-color);
-}
-
-.title-label {
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 1;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  color: var(--label-color);
-}
-
-.section-title {
-  margin-bottom: 100px;
-  font-size: 37px;
-  font-weight: 500;
-  line-height: 1.2;
-}
-
-
-
-.grid-item {
-  flex-basis: calc((100% - 60px * 4) / 4);
-  margin-left: 60px;
-  margin-top: 60px;
-}
 
 .direction-item-box {
   height: 255px;
   padding-top: 40px;
   padding-left: 40px;
-  padding-right: 43px; 
+  padding-right: 43px;
 }
 
 .direction-icon-box {
@@ -239,13 +43,13 @@ ul {
   fill: var(--accent-color);
 }
 
-.grid-item .link:hover .direction-item-box,
-.grid-item .link:focus .direction-item-box {
+.grid__item .link:hover .direction-item-box,
+.grid__item .link:focus .direction-item-box {
   background-color: var(--accent-color);
 }
 
-.grid-item .link:hover .icon,
-.grid-item .link:focus .icon {
+.grid__item .link:hover .icon,
+.grid__item .link:focus .icon {
   fill: var(--lite-color);
   stroke: currentColor;
 }
@@ -261,70 +65,13 @@ ul {
   color: var(--lite-color);
 }
 
-.gray-section {
-  background-color: var(--bg-color);
-  margin-left: 6.25%;
-}
-
-.gray-section .container {
-  margin-left: 6.65%;
-}
-
-.benefits.section {
-  padding-top: 147px;
-  padding-bottom: 150px;
-}
-
-
-.flex-list,
-.grid-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -60px;
-  margin-top: -60px;
-}
-
-.flex-item {
-  flex-basis: calc((100% - 60px * 2) / 2);
-  margin-left: 60px;
-  margin-top: 60px;
-  /* outline: 1px solid blue; */
-}
-
-
-.benefits .item {
-  line-height: 1.4;
-}
-
-.benefits .container-p,
-.benefits-about .container-p {
-  width: 155px;
-}
-
-.benefits-number {
-  display: block;
-  height: 75px;
-  margin-bottom: 37px;
-  font-size: 75px;
-  line-height: 1;
-}
-
-.benefits-number::after {
-  content: "";
-  display: block;
-  width: 70px;
-  height: 1px;
-  margin-top: 17px;
-  /* margin-bottom: 20px; */
-  background-color: var(--label-color);
-}
 
 .works {
   padding-bottom: 205px;
   line-height: 1;
 }
 
-.works .section-title {
+.works .section__title {
   margin-bottom: 60px;
 }
 .works h3,
@@ -338,12 +85,6 @@ ul {
   letter-spacing: 0.05em;
 }
 
-.works .button,
-.news .button,
-.footer .button {
-  font-weight: 500;
-}
-
 .works .list {
   display: flex;
   align-items: center;
@@ -353,7 +94,7 @@ ul {
 }
 
 .works .item {
-  flex-basis: cals ((100% - 60px * 2) / 2);
+  flex-basis: calc((100% - 60px * 2) / 2);
   margin-left: 60px;
   /* margin-top: 60px; */
 }
@@ -371,50 +112,8 @@ ul {
   margin-bottom: 15px;
 }
 
-.works a + p 
-.work-about a + p {
+.works a + p .work-about a + p {
   margin-bottom: 0;
-}
-
-.works .button,
-.works-about .button,
-.news .button {
-  display: flex;
-  height: 23px;
-  justify-content: flex-end;
-  align-items: center;
-  margin-left: auto;
-  padding-left: 65px;
-  padding-right: 0;
-  background-image: url("../images/icons/plus.svg");
-  background-repeat: no-repeat;
-  background-position-x: left;
-  background-position-y: center;
-}
-
-.works .button::before,
-.works-about .button:before,
-.news .button::before {
-  content: "";
-  display: block;
-  margin-right: 48px;
-  width: 1000px;
-  height: 1px;
-  
-  background-color: currentColor;
-}
-
-.news .button::before {
-  width: 1006px;
-}
-
-.works .button:hover,
-.works .button:focus,
-.works-about .button:hover,
-.works-about .button:focus,
-.news .button:hover,
-.news .button:focus {
-  background-image: url("../images/icons/redplus.svg");
 }
 
 .partners.section {
@@ -454,7 +153,7 @@ ul {
   padding-bottom: 205px;
 }
 
-.news .section-title {
+.news .section__title {
   margin-bottom: 98px;
 }
 
@@ -467,7 +166,7 @@ ul {
   /* display: flex; */
   margin-top: -60px;
   margin-left: -60px;
-} 
+}
 
 .news .item:last-child {
   margin-bottom: 83px;
@@ -509,7 +208,7 @@ ul {
   padding-left: 27px;
   font-size: 12px;
   letter-spacing: 0.05em;
-  background-image: url("../images/icons/grayarrow.svg");
+  background-image: url('../images/icons/grayarrow.svg');
   background-repeat: no-repeat;
   background-position-x: 0;
   background-position-y: 3px;
@@ -517,7 +216,7 @@ ul {
 
 .news .link:hover .details,
 .news .link:focus .details {
-  background-image: url("../images/icons/redarrow.svg");
+  background-image: url('../images/icons/redarrow.svg');
 }
 
 .footer-dark {
@@ -539,21 +238,6 @@ ul {
   line-height: 1.2;
 }
 
-.footer .button,
-.request .button {
-  width: 230px;
-  height: 55px;
-  font-size: 12px;
-  border: 1px solid var(--accent-color);
-}
-
-footer .button:hover,
-footer .button:focus,
-.request .button:hover,
-.request .button:focus {
-  color: var(--lite-color);
-  background-color: var(--accent-color);
-}
 .footer .link {
   display: block;
   padding-top: 9px;
@@ -579,15 +263,14 @@ footer .button:focus,
 }
 
 .footer-form input::placeholder {
-  color:var(--text-color)
-
+  color: var(--text-color);
 }
 
 .footer-form button {
   height: 18px;
   border: none;
   fill: var(--text-color);
-  background-color:var(--bg-color);
+  background-color: var(--bg-color);
 }
 
 .footer-form button:hover {
@@ -595,7 +278,7 @@ footer .button:focus,
   cursor: pointer;
 }
 
-.main-nav,
+.main-nav-footer,
 .placeholder {
   line-height: 1;
 }
@@ -611,7 +294,6 @@ footer .button:focus,
 }
 
 .low-footer p {
- 
   margin-bottom: 0;
 }
 
@@ -636,6 +318,7 @@ footer .button:focus,
 
 .hero-about .title-box {
   /* margin-top: 99px; */
+  margin-top: 0;
 }
 
 .hero-about .description-box {
@@ -644,8 +327,6 @@ footer .button:focus,
   font-size: 20px;
   line-height: 1.4;
 }
-
-
 
 .hero-about .benefits-number {
   height: 72px;
@@ -705,7 +386,7 @@ footer .button:focus,
   /* line-height: 1; */
   background-color: gray;
   /* color: var(--lite-color); */
-  background-image: url(../images/main/img1.jpg) ;
+  background-image: url(../images/main/img1.jpg);
   background-repeat: no-repeat;
   background-position: right;
   /* background-size: 1200px; */
@@ -718,10 +399,9 @@ footer .button:focus,
 
 .history .container {
   position: relative;
-
 }
 
-.history .section-title {
+.history .section__title {
   padding-right: 300px;
   font-size: 40px;
 }
@@ -736,7 +416,7 @@ footer .button:focus,
 }
 
 .history-number::after {
-  content: "";
+  content: '';
   position: absolute;
   left: -90px;
   top: 43px;
@@ -757,7 +437,6 @@ footer .button:focus,
   transform: translate(-50%, -50%);
   border-radius: 50%;
   /* display: inline-block; */
-  
 }
 .dot-1 {
   height: 61px;
@@ -788,7 +467,7 @@ footer .button:focus,
 
 .history img {
   position: absolute;
-  bottom: -837px;;
+  bottom: -837px;
   left: 0;
 }
 
@@ -802,9 +481,8 @@ footer .button:focus,
   counter-reset: my-counter; /* Задаём имя счетчика */
 }
 
-
 .equipment .list::before {
-  content: "";
+  content: '';
   display: block;
   width: 1200px;
   height: 1px;
@@ -819,9 +497,8 @@ footer .button:focus,
   align-items: center;
 }
 
-
 .equipment-label-manufacturer::before {
-  content:"0";
+  content: '0';
   position: absolute;
   display: block;
   top: 26px;
@@ -833,7 +510,7 @@ footer .button:focus,
   position: absolute;
   left: 0;
   bottom: 0;
-  content: "";
+  content: '';
   display: block;
   width: 1200px;
   height: 1px;
@@ -846,7 +523,6 @@ footer .button:focus,
 }
 .equipment .list-item {
   position: relative;
- 
 }
 
 .equipment .list-item::after {
@@ -856,11 +532,9 @@ footer .button:focus,
   content: counter(my-counter); /* Выводим число */
   counter-increment: my-counter; /* Увеличиваем значение счётчика */
   color: var(--label-color);
-  
 }
 
-
-.equipment-label-manufacturer .flex-item {
+.equipment-label-manufacturer .grid__item {
   margin-top: 0;
 }
 
@@ -885,17 +559,6 @@ footer .button:focus,
   justify-content: space-between;
 }
 
-
-.equipment .button {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 23px;
-  height: 35px;
-  padding-left: 0;
-  padding-right: 0;
-}
-
 .btn-minus {
   width: 23px;
   height: 1px;
@@ -908,26 +571,12 @@ footer .button:focus,
   pointer-events: none;
 }
 
-.equipment-manufacturer .button {
-  /* display: flex;
-  width: 23px;
-  height: 23px;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0;
-  border: none; */
-  background-image: url("../images/icons/plus.svg");
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
 .equimpent-img {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 570px;
   height: 343px;
-
 }
 
 .equipment-model-description {
@@ -947,23 +596,23 @@ footer .button:focus,
   margin-left: -60px;
 }
 
-.works-about-list .item:nth-child(4){
+.works-about-list .item:nth-child(4) {
   position: absolute;
   /* display: block; */
   left: 1260px;
   width: calc((100% - 60px * 3) / 3);
 }
 
-.request {
+.proposal {
   margin-top: -60px;
   padding-top: 0;
 }
 
-.request .section-title {
+.proposal .section__title {
   margin-bottom: 34px;
 }
 
-.request .section-title + p{
+.proposal .section__title + p {
   display: block;
   width: 320px;
   margin-bottom: 0px;
@@ -994,7 +643,6 @@ footer .button:focus,
 }
 
 .form__input-file {
-
   width: 0.1px;
   height: 0.1px;
   opacity: 0;
@@ -1048,20 +696,20 @@ footer .button:focus,
   font-size: 22px;
 } */
 
-.features__item .flex-item {
+.features__item .grid__item {
   margin-top: 26px;
   line-height: 1.3;
 }
 
-.features__item .flex-list {
+.features__item .grid {
   margin-top: 0;
 }
 
-.features__item .flex-list::before {
+.features__item .grid::before {
   position: absolute;
   top: 26px;
   right: 0;
-  content: "";
+  content: '';
   display: block;
   width: 570px;
   height: 1px;
@@ -1070,7 +718,7 @@ footer .button:focus,
 
 .features__item .list .link {
   line-height: 1;
-} 
+}
 
 .features__box {
   display: flex;
@@ -1088,7 +736,7 @@ footer .button:focus,
 
 .features__box:focus .icon,
 .features__box:hover .icon {
-   fill: var(--lite-color);
+  fill: var(--lite-color);
 }
 
 .features__box:focus .link,
@@ -1096,10 +744,10 @@ footer .button:focus,
   color: var(--lite-color);
 }
 
-.features .list.flex-list {
+.features .list.grid {
   padding-top: 13px;
   padding-bottom: 150px;
-} 
+}
 
 .features .icon {
   display: inline-flexbox;
@@ -1138,12 +786,12 @@ footer .button:focus,
 
 .features__row--item:hover .icon,
 .features__row--item:focus .icon {
-  fill: var(--lite-color)
+  fill: var(--lite-color);
 }
 
 .features__row--item:hover .link,
 .features__row--item:focus .link {
-  color: var(--lite-color)
+  color: var(--lite-color);
 }
 
 .features__row .direction-item-box {
@@ -1181,4 +829,3 @@ footer .button:focus,
 .kind-98x210 {
   width: 98px;
 }
-
