--- a/css/main.css
+++ b/css/main.css
@@ -312,6 +312,15 @@ footer .button:focus,
   margin: 30px;
 }
 
+.grid--work {
+  align-items: center;
+  margin: 0 -30px;
+}
+
+.grid__item--work {
+  margin: 0 30px;
+}
+
 .section {
   padding-top: 200px;
   padding-bottom: 200px;
@@ -328,6 +337,10 @@ footer .button:focus,
   font-size: 37px;
   font-weight: 500;
   line-height: 1.2;
+}
+
+.section__title--works {
+  margin-bottom: 60px;
 }
 
 .section__label {
@@ -408,6 +421,48 @@ footer .button:focus,
   height: 162px;
 }
 
+.services__link {
+  font-size: 19px;
+  line-height: 1.3;
+}
+
+.services__link:hover, .services__link:focus {
+  background-color: var(--accent-color);
+  color: var(--lite-color);
+}
+
+.services__direction {
+  height: 255px;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 43px;
+}
+
+.services__link:hover .services__direction,
+.services__link:focus .services__direction {
+  background-color: var(--accent-color);
+}
+
+.services__thumb {
+  display: flex;
+  width: 70px;
+  height: 70px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 53px;
+}
+
+.services__icon {
+  display: block;
+  fill: var(--accent-color);
+}
+
+.services__link:hover .services__icon,
+.services__link:focus .services__icon {
+  fill: var(--lite-color);
+  stroke: currentColor;
+}
+
 .benefits {
   padding-top: 147px;
   padding-bottom: 150px;
@@ -418,12 +473,7 @@ footer .button:focus,
   line-height: 1.4;
 }
 
-.benefits .container-p,
-.benefits-about .container-p {
-  width: 155px;
-}
-
-.benefits-number {
+.benefits__number {
   display: block;
   height: 75px;
   margin-bottom: 37px;
@@ -431,7 +481,7 @@ footer .button:focus,
   line-height: 1;
 }
 
-.benefits-number::after {
+.benefits__number::after {
   content: '';
   display: block;
   width: 70px;
@@ -441,57 +491,10 @@ footer .button:focus,
   background-color: var(--label-color);
 }
 
-.direction-item-box {
-  height: 255px;
-  padding-top: 40px;
-  padding-left: 40px;
-  padding-right: 43px;
-}
-
-.direction-icon-box {
-  display: flex;
-  width: 70px;
-  height: 70px;
-  /* padding-left: auto; */
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 53px;
-}
-
-.direction-icon-box .icon {
-  display: block;
-  fill: var(--accent-color);
-}
-
-.grid__item .link:hover .direction-item-box,
-.grid__item .link:focus .direction-item-box {
-  background-color: var(--accent-color);
-}
-
-.grid__item .link:hover .icon,
-.grid__item .link:focus .icon {
-  fill: var(--lite-color);
-  stroke: currentColor;
-}
-
-.services .link {
-  font-size: 19px;
-  line-height: 1.3;
-}
-
-.services .link:hover,
-.serveces .link:focus {
-  background-color: var(--accent-color);
-  color: var(--lite-color);
-}
-
 .works {
   padding-bottom: 205px;
   line-height: 1;
-}
-
-.works .section__title {
-  margin-bottom: 60px;
+  --grid__item: 2;
 }
 
 .works h3,
@@ -503,20 +506,6 @@ footer .button:focus,
 .works-label {
   font-size: 11px;
   letter-spacing: 0.05em;
-}
-
-.works .list {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-left: -60px;
-  /* margin-top: -60px; */
-}
-
-.works .item {
-  flex-basis: calc((100% - 60px * 2) / 2);
-  margin-left: 60px;
-  /* margin-top: 60px; */
 }
 
 .works .item:last-child {
@@ -1225,13 +1214,13 @@ footer .button:focus,
   color: var(--lite-color);
 }
 
-.features__row .direction-item-box {
+.features__row .services__direction {
   height: 150px;
   padding-top: 20px;
   padding-left: 20px;
 }
 
-.features__row .direction-icon-box {
+.features__row .services__thumb {
   width: 35px;
   height: 35px;
   margin-bottom: 35px;
