--- a/sass/layouts/_section.scss
+++ b/sass/layouts/_section.scss
@@ -16,6 +16,10 @@
   line-height: 1.2;
 }
 
+.section__title--history {  
+  font-size: 40px;
+}
+
 .section__title--works {
   margin-bottom: 60px;
 }
