--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -7,3 +7,7 @@
 .social-list__item:not(:last-child) {
   margin-right: 50px;
 }
+
+.social-list__item--footer:not(:last-child) {
+  margin-right: 32px;
+}
