--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -14,6 +14,8 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+  color: var(--text-color);
+  z-index: 99;
   
   &::before {
     content: '';
@@ -25,6 +27,7 @@
   }
 
   &:hover, &:focus {
+    color: var(--accent-color);
     background-image: url('../images/icons/redplus.svg');
   }
 }
@@ -42,6 +45,7 @@
   font-size: 12px;
   text-transform: uppercase;
   border: 1px solid var(--accent-color);
+  background-color: transparent;
 }
 
 footer .button:hover,
